--- a/Templates/layout.html
+++ b/Templates/layout.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contactos APP</title>
+  <title>CONTACT APP</title>
   <!--link rel="stylesheet" href="static/css/bootstrap.css"-->
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -14,7 +14,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">CONTACTOS APP</a>
+    <a class="navbar-brand" href="/">CONTACT APP</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -25,9 +25,9 @@
     {% endblock %}
   </div>
 
-  <footer>
+  <footer class="text-center pt-4">
     <h4>
-      by Gerson Ruano 2020
+      by Gerson Ruano 2023
     </h4>
   </footer>  
 
