--- a/Templates/edit-contact.html
+++ b/Templates/edit-contact.html
@@ -1,6 +1,15 @@
 {% extends 'layout.html' %}
 {% block body %}
-
+<div class="container ">
+    <div class="row">
+        <div class="col-4 mx-auto text-center">
+            <a href="/" class="btn btn-secondary btn btn-block text-center">
+                Cancelar
+            </a><br>
+        </div>
+    </div>
+    
+</div>
 <div class="col-md-4 offset-md-4">
     <div class="card card-body">
         <form action="/update/{{contact.0}}" method="POST">
