--- a/Templates/edit-contact.html
+++ b/Templates/edit-contact.html
@@ -1,15 +1,6 @@
 {% extends 'layout.html' %}
 {% block body %}
-<div class="container ">
-    <div class="row">
-        <div class="col-4 mx-auto text-center">
-            <a href="/" class="btn btn-secondary btn btn-block text-center">
-                Cancelar
-            </a><br>
-        </div>
-    </div>
-    
-</div>
+
 <div class="col-md-4 offset-md-4">
     <div class="card card-body">
         <form action="/update/{{contact.0}}" method="POST">
@@ -20,15 +11,20 @@
                 <input required type="text" name="lastname" placeholder="Apellido" value="{{contact.2}}" class="form-control">
             </div>
             <div class="form-group">
-                <input required type="tel" name="phone" minlength="8" maxlength="8" placeholder="Telefono" value="{{contact.3}}" class="form-control">
+                <input required type="text" name="phone" minlength="8" maxlength="8" placeholder="Telefono" value="{{contact.3}}" class="form-control">
             </div>
             <div class="form-group">
-                <input required type="text" name="email" placeholder="correo" value="{{contact.4}}" class="form-control">
+                <input required type="email" name="email" placeholder="correo" value="{{contact.4}}" class="form-control">
             </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-success btn-block">
                         Actualizar contacto
                     </button>
+                </div>
+                <div class="form-group">
+                    <a href="/" class="btn btn-secondary btn btn-block text-center">
+                        Cancelar
+                    </a>
                 </div>
         </form>
     </div>
