--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,103 +1,107 @@
 {% extends 'layout.html' %}
 {% block body %}
-
-<div class="row">
+<div class="container">
     <div class="col-md-5">
-        {% with messages = get_flashed_messages() %}
-		  {% if messages %}
-			{% for message in messages %}
-			  {% if 'agregado' in message %}
-				{% set alert_type = 'success' %}
-			  {% elif 'actualizado' in message %}
-				{% set alert_type = 'info' %}
-			  {% elif 'removido' in message %}
-				{% set alert_type = 'warning' %}
-			  {% else %}
-				{% set alert_type = 'info' %}
-			  {% endif %}
-              <div class="alert alert-{{ alert_type }} alert-dismissible fade show" role="alert" id="flash-alert">
-				<p>{{ message }}</p>
-				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-				  <span aria-hidden="true">&times;</span>
-				</button>
-			  </div>
+        <div class="d-flex justify-content-center">
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            {% for message in messages %}
+            {% if 'agregado' in message %}
+            {% set alert_type = 'success' %}
+            {% elif 'actualizado' in message %}
+            {% set alert_type = 'info' %}
+            {% elif 'removido' in message %}
+            {% set alert_type = 'danger' %}
+            {% else %}
+            {% set alert_type = 'warning' %}
+            {% endif %}
+            <div class="alert alert-{{ alert_type }} alert-dismissible fade show" role="alert" id="flash-alert">
+                <p>{{ message }}</p>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
             {% endfor %}
-            {% endif  %}
+            {% endif %}
             {% endwith %}
-        <div class="card card-body">
-            <form action="/add_contact" method="POST">
-                <div class="form-group">
-                    <input required type="text" name="fullname" placeholder="Nombre" class="form-control">
-                </div>
-                <div class="form-group">
-                    <input required type="text" name="lastname" placeholder="Apellido" class="form-control">
-                </div>
-                <div class="form-group">
-                    <input required type="text" minlength="8" maxlength="8"  name="phone" placeholder="Telefono" class="form-control">
-                </div>
-                <div class="form-group">
-                    <input required type="email" name="email" placeholder="correo" class="form-control">
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary btn-block">
-                        Agregar contacto
-                    </button>
-                </div>
-            </form>
-        </div>
-    </div>
-    <div class="col-md-7">
-        <table class="table table-striped table-bordered bg-white table-sm rounded">
-            <thead>
-                <tr class="text-center text-white bg-primary">
-                    <td>No.</td>
-                    <td>Nombre</td>
-                    <td>Apellido</td>
-                    <td>Telefono</td>
-                    <td>Correo</td>
-                    <td>Acciones</td>
-                </tr>
-            </thead>
-            <tbody>
-                {% for contact in contacts %}
-                <tr class="text-center">
-                    <td>{{ (pagination.page - 1) * pagination.per_page + loop.index }}</td>
-                    <td>{{ contact.1}}</td>
-                    <td>{{ contact.2}}</td>
-                    <td>{{ contact.3}}</td>
-                    <td>{{ contact.4}}</td>
-                    <td>
-                       <!--v class="btn-group" role="group" aria-label="">Editar
-                        <button type="button" class="btn btn-warning">Editar</button>
-                        <button type="button" class="btn btn-warning">Borrar</button-->
-                    </div>
-                        <a href="/edit/{{contact.0 }}" class="btn btn-info">
-                            <span class="fas fa-edit"></span>
-                        </a>
-                        <a href="/delete/{{ contact.0 }}" class="btn btn-danger btn-delete">
-                            <span class="fas fa-trash"></span>
-                        </a>
-
-                        <!--a href="#" class="btn btn-danger btn-delete" data-toggle="modal" data-target="#confirmDeleteModal_{{ contact.0 }}">
-                            <span class="fas fa-trash"></span>
-                        </a-->
-                        
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        <div class="pagination">
-            {{ pagination.links }}
         </div>
     </div>
 </div>
+
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-5">
+            <div class="card card-body">
+                <form action="/" method="GET">
+                    <div class="form-group">
+                        <input type="text" name="q" placeholder="Buscar por nombre" class="form-control"
+                            value="{{ request.args.get('q', '') }}">
+                    </div>
+                    <div class="form-group"><button type="submit" class="btn btn-primary btn-sm">
+                            Buscar
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row justify-content-center">
+    <div class="col-md-12 mt-2">
+        {% if contacts %}
+        <div class="table-responsive">
+            <table class="table table-striped custom-table table-bordered bg-white table-sm rounded">
+                <thead>
+                    <tr class="text-center text-white bg-primary">
+                        <td>No.</td>
+                        <td>Nombre</td>
+                        <td>Apellido</td>
+                        <td>Telefono</td>
+                        <td>Correo</td>
+                        <td>Acciones</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for contact in contacts %}
+                    <tr class="text-center">
+                        <td>{{ (pagination.page - 1) * pagination.per_page + loop.index }}</td>
+                        <td>{{ contact.1}}</td>
+                        <td>{{ contact.2}}</td>
+                        <td>{{ contact.3}}</td>
+                        <td>{{ contact.4}}</td>
+                        <td>
+                            <a href="/edit/{{contact.0 }}" class="btn btn-info">
+                                <span class="fas fa-edit"></span>
+                            </a>
+                            <a href="/delete/{{ contact.0 }}" class="btn btn-danger btn-delete">
+                                <span class="fas fa-trash"></span>
+                            </a>
+
+                            <!--a href="#" class="btn btn-danger btn-delete" data-toggle="modal" data-target="#confirmDeleteModal_{{ contact.0 }}">
+                                <span class="fas fa-trash"></span>
+                            </a-->
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        <div class="pagination">
+            {{ pagination.links }}
+        </div>
+        {% else %}
+        <h5 class="text-white text-center mt-2">No se encontraron resultados.</h5><br>
+        {% endif %}
+    </div>
+</div>
+</div>
+</div>
 <script>
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
         var flashAlert = document.getElementById('flash-alert');
-        
+
         if (flashAlert) {
-            setTimeout(function() {
+            setTimeout(function () {
                 flashAlert.style.display = 'none';
             }, 2000);  // 2000 milliseconds = 2 seconds
         }
