se agreggo icono de navegador, se edito el Readme

--- a/Templates/layout.html
+++ b/Templates/layout.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ContactApp</title>
+  <link rel="icon" href="https://img.icons8.com/fluency/48/new-contact.png" type="image/x-icon">
   <!--link rel="stylesheet" href="static/css/bootstrap.css"-->
   <!-- Asegúrate de cargar jQuery antes de Bootstrap -->
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
