--- a/Templates/layout.html
+++ b/Templates/layout.html
@@ -45,6 +45,6 @@
   <!--SCRIPT--> 
   <!--script src="static/js/bootstrap.min.js"></script>
   <script src="static/js/jquery-3.4.1.min.js"></script-->
-  <script src="{{url_for('static', filename='js/main.js')}}"></script>
+  <!--script src="{{url_for('static', filename='js/main.js')}}"></script-->
 </body>
 </html>
