--- a/Templates/index.html
+++ b/Templates/index.html
@@ -15,10 +15,11 @@
     {% set alert_type = 'warning' %}
     {% endif %}
     <div class="alert alert-{{ alert_type }} alert-dismissible fade show" role="alert" id="flash-alert">
-        <p>{{ message }}</p>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
-        </button>
+        </button><br>
+        <p>{{ message }}</p>
+        
     </div>
     {% endfor %}
     {% endif %}
