modificar input buscar, agregar requirements, readME

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -26,7 +26,7 @@
     {% endwith %}
 </div>
 
-<div class="container">
+<!--div class="container">
     <div class="row justify-content-center">
         <div class="col-md-5">
             <div class="card card-body text-center">
@@ -43,7 +43,7 @@
             </div>
         </div>
     </div>
-</div>
+</div-->
 
 <!-- Modal de confirmación para eliminar -->
 <div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
