--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,49 +1,81 @@
-body{
-background: #00B4DB;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #0083B0, #00B4DB);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #0083B0, #00B4DB); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+body {
+  background: #00B4DB;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #0083B0, #00B4DB);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #0083B0, #00B4DB);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
+
 .content {
-    padding-bottom: 10px; /* Ajusta el espacio en la parte inferior para evitar que el pie de página se superponga al contenido */
+  padding-bottom: 10px;
+  /* Ajusta el espacio en la parte inferior para evitar que el pie de página se superponga al contenido */
 }
 
 .custom-table {
-  border-radius: 40px; /* Ajusta el valor según el nivel de redondeo deseado */
-  overflow: hidden; /* Evita que los bordes internos se sobresalgan */
-  border-collapse: separate; /* Separa los bordes para permitir el redondeo */
-  border-spacing: 0; 
+  border-radius: 40px;
+  /* Ajusta el valor según el nivel de redondeo deseado */
+  overflow: hidden;
+  /* Evita que los bordes internos se sobresalgan */
+  border-collapse: separate;
+  /* Separa los bordes para permitir el redondeo */
+  border-spacing: 0;
+}
+
+/* Reducir padding de celdas */
+.custom-table td,
+.custom-table th {
+  padding: 0.3rem !important;
+  /* valor más pequeño que el default */
+  font-size: 0.85rem;
+  /* texto más pequeño */
+}
+
+/* Ajustar botones */
+.custom-table .btn {
+  padding: 0.2rem 0.4rem !important;
+  font-size: 0.75rem !important;
 }
 
 /* main.css */
-html, body {
-    height: 100%;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .container {
-    flex: 1;
-  }
-  
-  footer {
-    margin-top: auto; /* Esto empuja el footer al fondo */
-  }
+html,
+body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
 
-  .actions {
-    display: flex;
-    gap: 5px; /* Espaciado entre botones */
-    justify-content: center; /* Centrar los botones */
-    flex-wrap: nowrap; /* Evita que los botones se muevan a una nueva línea */
+.container {
+  flex: 1;
+}
+
+footer {
+  margin-top: auto;
+  /* Esto empuja el footer al fondo */
+}
+
+.actions {
+  display: flex;
+  gap: 5px;
+  /* Espaciado entre botones */
+  justify-content: center;
+  /* Centrar los botones */
+  flex-wrap: nowrap;
+  /* Evita que los botones se muevan a una nueva línea */
 }
 
 #flash-alert-container {
   position: fixed;
-  top: 20px; /* Espacio desde arriba */
-  right: 20px; /* Espacio desde la izquierda */
-  z-index: 1050; /* Para que esté sobre otros elementos */
-  width: 300px; /* Ancho controlado */
+  top: 20px;
+  /* Espacio desde arriba */
+  right: 20px;
+  /* Espacio desde la izquierda */
+  z-index: 1050;
+  /* Para que esté sobre otros elementos */
+  width: 300px;
+  /* Ancho controlado */
 }
 
 #flash-alert {
@@ -52,5 +84,3 @@ html, body {
   border-radius: 8px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
 }
-
-  
